<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        style="@style/PopupTitleStyle"
        android:text="@string/popup_articleselect_title"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="3dp"
        android:background="@drawable/shape_typing_list">

        <ListView
            android:id="@+id/articles_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:choiceMode="singleChoice"
            android:listSelector="@drawable/selector_typing_list"
            android:divider="#0fff"/>
    </LinearLayout>

    <Button
        android:id="@+id/load_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_gravity="end"
        android:background="@android:color/transparent"
        android:fontFamily="@font/noto_sans_kr_bold"
        android:textColor="@color/typeedu_blue"
        android:textSize="16sp"
        android:text="@string/popup_articleselect_load"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/PopupMenuBtnStyle"
            android:background="@drawable/shape_grey_btn"
            android:text="@string/popup_cancel"/>

        <Button
            android:id="@+id/next_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/PopupMenuBtnStyle"
            android:text="@string/popup_next"/>
    </LinearLayout>

</LinearLayout>